# obsidian-dataview-persisted

./: .eslintrc  .gitignore  Cargo.toml  cargo.d.ts  main.ts  manifest.json  package.json  publish.js  rollup.config.mjs  tsconfig.json  wasm.ts
rs-src/: lib.rs
